hopefully fixed the font issue, read https://stackoverflow.com/questions/75601350/tailwind-and-vite-warnings-didnt-resolve-at-build-time-it-will-remain-unchan

--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,9 +1,7 @@
 @font-face {
   font-family: 'Georama';
-  src: url('./assets/fonts/Georama-VariableFont_wdth\,wght.ttf') format('truetype');
-  font-weight: 100 900; /* Variable font weight range */
+  src: url('../src/assets/fonts/Georama-VariableFont_wdth\,wght.ttf') format('truetype');
+  font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
-
-/* Add other font weights or styles if needed */
